Allows custom commands now, and icon changes. Signed-off-by:  akameswaran

--- a/PyHomeRemote/res/xml/pref_data_sync.xml
+++ b/PyHomeRemote/res/xml/pref_data_sync.xml
@@ -4,7 +4,7 @@
          NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
          dismiss it.
     -->
-    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
+    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. 
     <ListPreference
         android:defaultValue="180"
         android:entries="@array/pref_sync_frequency_titles"
@@ -14,12 +14,12 @@
         android:positiveButtonText="@null"
         android:title="@string/pref_title_sync_frequency" />
 
-    <!--
+ 
          This preference simply launches an intent when selected. Use this UI sparingly, per
          design guidelines.
-    -->
+   
     <Preference android:title="@string/pref_title_system_sync_settings" >
         <intent android:action="android.settings.SYNC_SETTINGS" />
-    </Preference>
+    </Preference>  -->
 
 </PreferenceScreen>
