--- a/PyHomeRemote/res/layout/fragment_nodata.xml
+++ b/PyHomeRemote/res/layout/fragment_nodata.xml
@@ -5,7 +5,7 @@
     android:orientation="vertical" >
 
     <EditText
-        android:id="@+id/editText1"
+        android:id="@+id/resultPane"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:ems="10"
