--- a/PyHomeRemote/res/layout/activity_main.xml
+++ b/PyHomeRemote/res/layout/activity_main.xml
@@ -8,5 +8,14 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/hello_world" />
+        <AutoCompleteTextView
+      android:id="@+id/autoComplete"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_marginTop="20dp"
+      android:ems="8" />
+    
 
 </RelativeLayout>
+
+
