Brought back the "All" device option to mobile web app The device type list now only displays the devices types the current setup has

--- a/pytomation_web/mobile/css/index.css
+++ b/pytomation_web/mobile/css/index.css
@@ -9,7 +9,7 @@ table {
   width: 100%;
   table-layout:fixed;
 }
-#tableDevices{
+#tableDevices, #tableDevicesLong{
   padding-right: 4px;
 }
 div.ui-slider {
