pytomation_web/mobile -> Cache and sizing bug fix The room devices cache will now update when stauts are sent The slider and non-thermostat devices would size incorrectly   if only one device was listed; now fixed

--- a/pytomation_web/mobile/css/index.css
+++ b/pytomation_web/mobile/css/index.css
@@ -5,6 +5,13 @@ button.toggle, button.command {
     margin-bottom: 0px;
     margin-top:0px;
 }
+button.room_toggle {
+    width:100%;
+    margin-bottom: 0px;
+    margin-top:0px;
+    padding-bottom: 2px;
+    padding-top: 2px;
+}
 table {
   width: 100%;
   table-layout:fixed;
